[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
itertools = "0.12.0"
rayon = "1.8.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
rstest = "0.18.2"
rstest_reuse = "0.6.0"
tracing-tracy = "0.10.4"
tracy-client = "0.16.4"
tracy-client-sys = "0.22.0"
miette = { version = "5.10", features = ["fancy"] }
nom = { version = "7.1.3" }
ndarray = { version = "0.15.6" }
serde = { version = "1.0.193", features = ["derive" ] }
serde_json = "1.0.108"
thiserror = "1.0.50"
dhat = "0.3.2"
criterion = { version = "0.4", features = ["html_reports"] }
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1
